# tak

./: .gitignore  BACKLOG  LICENSE  README  foo.txt  hste.hs  tak.cabal  tecs.cabal
src/: testch.hs
src/Tak/: Buffer.hs  Config.hs  Display.hs  Editor.hs  GlobalState.hs  GotoLine.hs  Main.hs  Range.hs  RunLoop.hs  ShowKeyEvents.hs  Text.hs  Types.hs  Util.hs
src/Tak/Buffer/: Line.hs  LineSeq.hs
src/Tak/Editor/: Cursor.hs  Edit.hs  InfoLine.hs  Replace.hs  Search.hs  Selection.hs  Undo.hs
src/Tak/GlobalState/: Clipboard.hs
src/Tecs/: Buffer.hs  Display.hs  Editor.hs  Tes.hs  Text.hs  Types.hs  Util.hs
src/Tecs/Buffer/: Line.hs  LineSeq.hs
src/Tecs/Editor/: Cursor.hs  Edit.hs  Selection.hs  Undo.hs
