Name:Tak
Version:0.2
Cabal-Version: >= 1.2
License:MIT
Author:Mike Verdone
Homepage:http://mike.verdone.ca/
Category:
Synopsis:A text editor
Build-Type: Simple

Executable tak
  Hs-Source-Dirs: src
  Main-Is: Tak/Main.hs
  Build-Depends: base >= 4
               , bytestring >= 0.9
               , containers >= 0.4
               , directory >= 1.1.0
               , hscurses
               , setlocale >= 0.0.3
               , mtl >= 2
               , text >= 0.11
               , lens >= 2.9
               , process >= 1.1
               , strict >= 0.3
               , json >= 0.7

